# spincore_apps

./: .gitignore  2D_MRI.bat  CMakeLists.txt  CPMG.bat  CPMG.h  Field_Sweep.bat  Field_Sweep.h  GradientEcho.c  Hahn_echo.bat  Hahn_echo.h  IR.bat  JFAB_Hahn_echo_hardcode.c  JFAB_Hahn_echo_hardcode.sh  README.md  RPG_CPMG.c  RPG_Field_Sweep.c  RPG_Hahn_echo.c  RPG_IR.c  RPG_excite_test.c  RPG_noise.c  RPG_nutation.c  RPG_nutation_90.c  RPG_tune.c  RPG_tune_TTL.c  SWIG_README  active.ini  adc_offset.c  adc_offset.ui  adc_offset_ui.py  biot_savart_20190607.py  biot_savart_20190716.py  bitmap.c  calc_adc_offset.py  compile_adc.sh  compile_ppg.sh  compile_tune_TTL.sh  convert_txt.py  convert_txt2h5.py  environment.sh  example_1.c  (+22 more)
.github/workflows/: flake8.yml
C_examples/: CPMG.bat  CPMG.h  FID.bat  FID_Readout.bat  Field_Sweep.bat  GradientEcho.h  Hahn_echo.bat  IR.h  RPG_Hahn_echo.c  RPG_nutation90.c  RPG_p90.c  RPG_tune.c  RPG_tune_TTL.c  SpinCore_pp_copy.c  adc_offset.c  bitmap.h  board.h  compile_adc.sh  compile_tune.sh  controls.h  devices.h  mrispinapi.h  nutation90.bat  nutation90.h  pci.h
Instruments/: __init__.py  bridge12.py  gds.py  gigatronics.py  gpib_eth.py  gpib_legacy.py  serial_instrument.py  temp.py
Sleator_apps/: README
Sleator_apps/CPMG/: cpmg.c  cpmg.h  cpmg_example.bat
Sleator_apps/Hahn_echo/: Hahn_echo.bat  Hahn_echo.c  Hahn_echo.h
Sleator_apps/Hahn_echo_sweep/: Hahn_echo_sweep.bat  Hahn_echo_sweep.c  Hahn_echo_sweep.h
Sleator_apps/Stimulated_echo/: Stimulated_echo.bat  (+2 more)
SpinAPI/SpinAPI/examples/RadioProcessor/: CMakeLists.txt  DirectCapture.c  excite_test.c  singlepulse_nmr.h  singlepulse_nmr_example.bat
SpinAPI/examples/General/: CMakeLists.txt  pb_debug.c  pb_read_firmware.c  pb_stop.c
SpinAPI/examples/PBDDS-III/: CMakeLists.txt  pbdds3_ex1.c  pbdds3_ex2.c
SpinAPI/examples/PulseBlaster-Quadcore/: CMakeLists.txt  pb_quadcore250_example1.c  pb_quadcore250_example2.c  pb_quadcore250_example3.c  pb_quadcore250_example4.c  pb_quadcore500_example2.c  pb_quadcore500_example3.c
SpinAPI/examples/PulseBlaster24/: CMakeLists.txt  pb24_ex1.c  pb24_ex2.c  pb24_ex4.c  pb24_mem_depth_test.c  pb24_programmable_clock.c  pb24_two_boards.c
SpinAPI/examples/PulseBlasterDDS-I/: CMakeLists.txt  pbdds_i_300_amplitude_sweep.c  pbdds_i_300_awg_ramp.c  pbdds_i_300_cont.c  pbdds_i_300_excite_test.c  pbdds_i_300_frequency_sweep.c  pbdds_i_300_phase_test.c
SpinAPI/examples/PulseBlasterDDS-II/: CMakeLists.txt  pbdds2_TTLflag_default.c  pbdds2_awg.c  pbdds2_excite_test.c  pbdds2_load_shape_ram.c  pbdds2_startAddress_default.c
SpinAPI/examples/PulseBlasterESR/: CMakeLists.txt  pbesr_long_delay_test.c  pbesr_loop_test.c  pbesr_manual_example.c
SpinAPI/examples/PulseBlasterESR-PRO/: CMakeLists.txt  pbesr_pro_shortpulse_disable.c
SpinAPI/examples/PulseBlasterESR-PRO-II/: CMakeLists.txt  pbesr_pro_ii_example1.c  pbesr_pro_ii_example2.c  pbesr_pro_ii_example3.c  pbesr_pro_ii_example4.c  pbesr_pro_ii_example5.c  pbesr_pro_ii_reset.c  pbesr_pro_ii_trigger.c
SpinAPI/examples/USB-PTS/: CMakeLists.txt  pts_fsweep.c  usb-pts_ex_160.c  usb-pts_ex_250.c  usb-pts_ex_3200.c  usb-pts_ex_500.c
SpinAPI/examples/USB-PTS/includes/: CMakeLists.txt  incl_250.c  incl_300.c  incl_500.c  incl_fsweep_once_160.c  incl_fsweep_once_250.c  incl_fsweep_once_300.c  incl_fsweep_once_3200.c  incl_fsweep_once_500.c
SpinAPI/interpreter/src/: CMakeLists.txt  ChangeLog.txt  Readme.txt  gui.cpp  interpreter.cpp  interpreter.h
SpinAPI/src/: CMakeLists.txt  License.txt  README.txt  caps.c  caps.h  dds.h  debug.h  driver-linux-direct.c  driver-os.h  driver-usb-stub.c  driver-usb.h  fid.h  if.c  if.h  io_os.h  radioprocessor.h  spinapi.c  usb.h  usb_endpoints.h  util.c  util.h  version.h
SpinAPI/src/ddk_headers/: devioctl.h
SpinAPI/src/ftd2xx/amd64/: ftd2xx64.lib
SpinCore_pp/: GDS.py  SpinCore_pp.c  SpinCore_pp.i  SpinCore_pp.py  ]  __init__.py  app_framework.py  bruker_sender.py  calc_vdlist.py  calibrate_clock_offset.py  capture_nutation_amp.py  compile_SpinCore_pp.sh  config_parser_fn.py  echo_experiment.py  echo_experiment.ui  echo_experiment_ui.py  expt.py  gds_for_tune.py  getBoardInfo.bat  hermitian_phasing.py  main.py  mplwidget.py  power_helper.py  proc_CPMG.py  proc_CPMG_mw.py  proc_FS.py  proc_GDS.py  proc_Hahn_echo.py  proc_Hahn_echoph.py  proc_IR.py  proc_MWE.py  proc_T1CPMG.py  proc_calibrate_clock.py  proc_nutation.py  proc_scope.py  process_first_arg.py  pulse_length_conv.py  run_COSY.py  run_COSY_DQF.py  run_CPMG.py  (+32 more)
SpinCore_pp.egg-info/: PKG-INFO
builddir/: .buildinfo  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc_src/: ConfigFile.rst  FranckLabMethods.rst  Makefile  conf.py  index.rst  intro.rst  ppg_PhaseCycling_details.rst
examples/: 211102_500uM_TEMPOL_test_final.h5  90time_conv.py  CPMG.rst  Ep_spacing.py  Hahn_echo_proc.py  active.ini  active.ini~  adc_offset.py  basic_config_example.py  calc_T1s.py  call_config_ex.py  combined_ODNP.py  combined_ODNP_CPMG.py  config_parser_fn.py  find_gamma_eff.py  gds_for_tune.py  generic_echo.py  just_enhancement.py  proc_ODNP_rough.py  proc_combined_ODNP.py  proc_fieldSweep.py  proc_fieldSweep_rough.py  proc_fieldsweep.py  read_just_Ep.py  read_log.py  run_COSY.py  run_COSY_DQF.py  run_CPMG.py  run_CPMG_calib.py  run_CPMG_mw.py  run_FID.py  run_FID_mw.py  run_FS.py  run_Hahn_echo.py  run_Hahn_echo.py~  run_Hahn_echo_mw.py  run_Hahn_echo_rough.py  run_IR.py  run_MWE.py  run_ODNP.py  (+19 more)
francklab_SpinCore_apps.egg-info/: PKG-INFO
grad_design/: biot_savart_20190610.py  biot_savart_20190716.py  biot_savart_JF_planar.py  biot_savart_curved.py  biot_savart_planar.py  biot_savart_plot.py  collar.py  collar.scad  collar.stl  curved_gradient.npz  grad_temp.scad  grad_temp.stl  grad_template.py  gradient_code.py  practice.py  practice.scad  practice.stl  test_nut.py  test_nut.scad
gradients/: biot_savart_JF.py  biot_savart_planar.py  planar_gradient.npz
swig/: README_SWIG  _example.pyd  compile_swig.sh  example.i  example_wrap.c
test_c/: calc_nutation.c  calc_vd.c
(+248 files in other folders)
